--- a/css/polo.css
+++ b/css/polo.css
@@ -8,5 +8,19 @@
 }
 
 .menu_principal_button{
+    font-size: 35px;
+    align-content: center;
+    width: 100%;
+    height: 80px;
+    margin-bottom: 10px;
+}
+
+.element{
+    margin-left: auto;
+    margin-right: auto;
+    width: 60%;
+}
+
+.menu_principal{
     align-content: center;
 }
