--- a/css/pages.css
+++ b/css/pages.css
@@ -164,3 +164,10 @@ img#img_popup_left {
     border:1px solid #ddd;
     padding:10px;
 }
+
+/*ADMINISTRATION*/
+
+.liste_utilisateur table, .liste_utilisateur tr, .liste_utilisateur td {
+    border: solid 1px;
+    text-align: center;
+}
