update 0.27 : page du profil avec le tableau de score. Sécurité aux niveaux des jetons pour les mini-jeux

--- a/css/pages.css
+++ b/css/pages.css
@@ -7,10 +7,13 @@
 
 #profil_image_personnage {
     margin-right: 50px;
+    float: left;
+    padding-top: 20px;
 }
 
 #profil_badges {
     padding-left: 50px;
+    text-align: center;
 }
 
 #profil_top {
@@ -22,10 +25,22 @@
     line-height: 15px;
 
 }
+#first_row_tableau_score{
+    font-weight: bold;
+    font-size: 110%;
+    background-color: rgba(149, 139, 147, 0.1);
+}
 
 table#tableau_scores, .tableau_scores tr, .tableau_scores td {
-    border: solid 1px;
+    border: solid 1px black;
     text-align: center;
+}
+
+#ligne_tableau_score_user {
+    font-size: 110%;
+    font-style: italic;
+    font-weight: bold;
+    color: #003eff;
 }
 
 h4.tableau_scores {
@@ -201,6 +216,11 @@ img#img_popup_left {
     height: 40px;
     border:1px solid #ddd;
     padding:10px;
+}
+
+#errJetons {
+    color: red;
+    display: none;
 }
 
 /*ADMINISTRATION*/
