--- a/css/polo.css
+++ b/css/polo.css
@@ -112,3 +112,13 @@ li{
 .popupcontent{
     padding:15px;
 }
+
+#loading_gif{
+    display: none;
+    position: absolute;
+    top:50%;
+    left: 50%;
+    margin-left: -250px; /*Half the value of width to center div*/
+    margin-top: -250px; /*Half the value of height to center div*/
+    z-index: 200;
+}
