--- a/css/pages.css
+++ b/css/pages.css
@@ -74,8 +74,9 @@ p.choix {
 
 /* PROFIL */
 #profil_apercu {
-    padding: 10px 50px;
-    padding-top: 0;
+    width: 280px;
+    padding-left: 30px;
+    padding-top: 10px;
 }
 
 #profil_score_jeton{
@@ -89,11 +90,11 @@ p.choix {
 }
 
 #profil_badges {
-    margin: auto;
+    vertical-align: top;
     padding-left: 10px;
     text-align: center;
     border: none;
-    width: 440px;
+    width: 400px;
 }
 
 #profil_badges > div{
@@ -104,6 +105,7 @@ p.choix {
 #profil_top {
     display: table;
     padding: 0;
+    margin: 0;
 }
 #profil_top > div {
     display: table-cell;
@@ -134,6 +136,11 @@ h4.tableau_scores {
 
 #tabs {
     margin-bottom: 20px;
+    border: none;
+}
+
+#tabs > div{
+    border: lightgray solid 1px;
 }
 
 h5.table_badges {
