--- a/css/quizz.css
+++ b/css/quizz.css
@@ -8,7 +8,8 @@
     -webkit-box-shadow:0 1px 5px #D9D9D9,inset 0 10px 20px #F1F1F1;
     -moz-box-shadow:0 1px 5px #D9D9D9,inset 0 10px 20px #F1F1F1;
     border-radius:20px 2px 20px 2px;
-    position:relative;width:900px;
+    position:relative;
+    width:900px;
     height:500px;
 }
 .main-quiz-holder *{
@@ -21,8 +22,8 @@
     color:#6C6C6C;
 }
 .main-quiz-holder .slide-container{
-    width:500px;
-    padding:100px 50px 50pt 180px;
+    width:650px;
+    padding:70px 50px 50pt 110px;
 }
 .results-container,.intro-container{
     text-align:center;
