update 1.08 : amélioration du preloadState + ajout d'un texte au chargement

--- a/css/menu.css
+++ b/css/menu.css
@@ -71,3 +71,9 @@ input#button_retour{
     font-style: italic;
 }
 
+
+/*Desactive l'arrondi que donne iOS aux boutons*/
+input, textarea {
+    -webkit-appearance: none;
+    -webkit-border-radius: 0;
+}
