--- a/css/quizz.css
+++ b/css/quizz.css
@@ -19,7 +19,7 @@
 }
 .main-quiz-holder a{
     text-decoration:none;
-    color:#6C6C6C;
+    color:#ffffff;
 }
 .main-quiz-holder .slide-container{
     width:800px;
