--- a/mini-jeux/2048/style/main.css
+++ b/mini-jeux/2048/style/main.css
@@ -116,7 +116,8 @@ hr {
   margin-bottom: 30px; }
 
 .container {
-  width: 500px;
+  width: 600px;
+  text-align: justify;
   margin: 0 auto; }
 
 @-webkit-keyframes fade-in {
@@ -139,6 +140,7 @@ hr {
     opacity: 1; } }
 .game-container {
   margin-top: 40px;
+  margin-left: 50px;
   position: relative;
   padding: 15px;
   cursor: default;
