update 1.39 : modification du jQuizzy et du design de polo pour les quizz

--- a/css/polo.css
+++ b/css/polo.css
@@ -238,9 +238,7 @@ input#button_mini_jeux{
 }
 
 #img_op {
-    position: absolute;
-    left: -260px;
-    top: 35px;
+    position: relative;
 }
 
 #main_polo{
