--- a/css/quizz.css
+++ b/css/quizz.css
@@ -1,7 +1,7 @@
 
 .main-quiz-holder{
     margin:0 auto;
-    background:#FCFCFC;
+    background:#DCDCDC;
     border:1px solid #dedede;
     box-shadow:0 1px 5px #D9D9D9,inset 0 10px 20px #F1F1F1;
     -o-box-shadow:0 1px 5px #D9D9D9,inset 0 10px 20px #F1F1F1;
@@ -11,6 +11,7 @@
     position:relative;
     width:940px;
     height:660px;
+    overflow-y: auto;
 }
 .main-quiz-holder *{
     margin:0;
@@ -23,13 +24,13 @@
 }
 .main-quiz-holder .slide-container{
     width:800px;
-    padding:330px 20px 20px 70px;
+    padding:20px 20px 20px 70px;
 }
 .results-container,.intro-container{
     text-align:center;
 }
 .results-container{
-
+    margin-top: 50px;
 }
 .main-quiz-holder .slide-container .question,.main-quiz-holder h2.qTitle{
     margin:0px 0 0px 0;
@@ -75,11 +76,12 @@
     border:1px solid #a1a1a1;
 }
 .main-quiz-holder .slide-container ul.answers li.selected{
-    background:#6fb2e5;
-    box-shadow:0 1px 5px #0061aa,inset 0 10px 20px #b6f9ff;
-    -o-box-shadow:0 1px 5px #0061aa,inset 0 10px 20px #b6f9ff;
-    -webkit-box-shadow:0 1px 5px #0061aa,inset 0 10px 20px #b6f9ff;
-    -moz-box-shadow:0 1px 5px #0061aa,inset 0 10px 20px #b6f9ff;
+    color: #ffffff;
+    background:#fa3d6e;
+    box-shadow:0 1px 5px #fa3d6e,inset 0 10px 20px #f69ab2;
+    -o-box-shadow:0 1px 5px #fa3d6e,inset 0 10px 20px #f69ab2;
+    -webkit-box-shadow:0 1px 5px #fa3d6e,inset 0 10px 20px #f69ab2;
+    -moz-box-shadow:0 1px 5px #fa3d6e,inset 0 10px 20px #f69ab2;
 }
 .main-quiz-holder .slide-container .prev,.main-quiz-holder .slide-container .next{
     height:25px;
@@ -87,11 +89,11 @@
     padding:5px 10px;
     font-size:16px;
     color:#ffffff;
-    background:#6fb2e5;
-    box-shadow:0 1px 5px #0061aa,inset 0 10px 20px #b6f9ff;
-    -o-box-shadow:0 1px 5px #0061aa,inset 0 10px 20px #b6f9ff;
-    -webkit-box-shadow:0 1px 5px #0061aa,inset 0 10px 20px #b6f9ff;
-    -moz-box-shadow:0 1px 5px #0061aa,inset 0 10px 20px #b6f9ff;
+    background:#fa3d6e;
+    box-shadow:0 1px 5px #fa3d6e,inset 0 10px 20px #f69ab2;
+    -o-box-shadow:0 1px 5px #fa3d6e,inset 0 10px 20px #f69ab2;
+    -webkit-box-shadow:0 1px 5px #fa3d6e,inset 0 10px 20px #f69ab2;
+    -moz-box-shadow:0 1px 5px #fa3d6e,inset 0 10px 20px #f69ab2;
 }
 .main-quiz-holder .slide-container .next{
     background:#fa3d6e;
