--- a/css/quizz.css
+++ b/css/quizz.css
@@ -84,9 +84,9 @@
     -moz-box-shadow:0 1px 5px #fa3d6e,inset 0 10px 20px #f69ab2;
 }
 .main-quiz-holder .slide-container .prev,.main-quiz-holder .slide-container .next{
-    height:25px;
+    height:30px;
     cursor:pointer;
-    padding:5px 10px;
+    padding:10px;
     font-size:16px;
     color:#ffffff;
     background:#fa3d6e;
