--- a/css/quizz.css
+++ b/css/quizz.css
@@ -12,6 +12,7 @@
     width:940px;
     height:660px;
     overflow-y: auto;
+    -webkit-overflow-scrolling: touch; /* allow touch scrolling in webkit browsers */
 }
 .main-quiz-holder *{
     margin:0;
